--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<li class="nav__item">
 						<a href="#" class="nav__link">FAQ</a>
 					</li>
-					<li class="nav__item">
+					<li class="nav__cta">
 						<a href="#" class="btn btn--cta">KUP</a>
 					</li>
 				</ul>
